Сделана кнопка добавления

--- a/PyrokinesisPets/Pages/DelyaViewingPage.xaml
+++ b/PyrokinesisPets/Pages/DelyaViewingPage.xaml
@@ -64,5 +64,9 @@
                 </GridView>
             </ListView.View>
         </ListView>
+        <Button Content="Добавить" 
+        Height="30"
+        FontSize="23"
+        Grid.Column="2" Grid.Row="5" Click="Button_Click"/>
     </Grid>
 </Page>
