--- a/PyrokinesisPets/Pages/DelyaViewingPage.xaml
+++ b/PyrokinesisPets/Pages/DelyaViewingPage.xaml
@@ -31,7 +31,7 @@
          Width="315" Height="30"
          BorderThickness="2" 
          Grid.Column="1" Grid.ColumnSpan="3" Grid.Row="1" TextChanged="SearchTb_TextChanged"/>
-        
+
         <ListView x:Name="DelyaSlv" 
                   Grid.Row="2" Grid.Column="1" 
                   Grid.ColumnSpan="3" Grid.RowSpan="3"
@@ -39,7 +39,7 @@
             <ListView.View>
                 <GridView>
                     <GridView.Columns>
-                        
+
                         <GridViewColumn Header="фоточка"
                                 Width="200">
                             <GridViewColumn.CellTemplate>
@@ -63,6 +63,12 @@
         <Button Content="Добавить" 
         Height="30"
         FontSize="23"
-        Grid.Column="2" Grid.Row="5" Click="Button_Click"/>
+        Grid.Column="1" Grid.Row="5" Click="Button_Click" RenderTransformOrigin="-0.328,0.398" Margin="0,26,0,19"/>
+        <Button Content="Общий альбом" 
+                Height="30"
+                FontSize="23"
+                Width="200"
+                Grid.ColumnSpan="2"
+                Grid.Column="2" Grid.Row="5" Click="Button_Click_1"/>
     </Grid>
 </Page>
