--- a/PyrokinesisPets/Pages/PiraViewingPage.xaml
+++ b/PyrokinesisPets/Pages/PiraViewingPage.xaml
@@ -58,9 +58,15 @@
                 </GridView>
             </ListView.View>
         </ListView>
+        <Button Content="Общий альбом" 
+        Height="30"
+        FontSize="23"
+        Width="200"
+        Grid.ColumnSpan="2"
+        Grid.Column="2" Grid.Row="5" Click="Button_Click_1"/>
         <Button Content="Добавить" 
                 Height="30"
                 FontSize="23"
-                Grid.Column="2" Grid.Row="5" Click="Button_Click"/>
+                Grid.Column="1" Grid.Row="5" Click="Button_Click"/>
     </Grid>
 </Page>
