--- a/PyrokinesisPets/Pages/SharedAlbomPage.xaml
+++ b/PyrokinesisPets/Pages/SharedAlbomPage.xaml
@@ -67,7 +67,7 @@
                                 Width="150">
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
-                                    <TextBlock Text="{Binding Discription}"/>
+                                    <TextBlock Text="{Binding Description}"/>
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
